[package]
name = "wtransport_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "wtransport_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.34"
anyhow = "1"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
wtransport = "0.3"
#wtransport = { git = "https://github.com/BiagioFesta/wtransport.git" }

